styles/properties.less
@import "./_variables";
@import "./_mixins";

@font-face {
  font-family: 'bpmn-io-pp';
  src: url(@font-eot);
  src: url(@font-eot) format('embedded-opentype'),
       url(@font-woff) format('woff'),
       url(@font-ttf) format('truetype'),
       url(@font-svg) format('svg');
  font-weight: normal;
  font-style: normal;
}


.djs-properties-panel {
  .overlay();
  position: relative;

  &:empty {
    display: none;
  }

  label,
  input {
    vertical-align: middle;
  }


  input,
  button,
  textarea {
    padding: 3px 6px;
    border: 1px solid @gray-light;

    &:focus {
      .focus();
    }

    &.invalid {
      .invalid();
      &:focus {
        box-shadow: 0 0 1px 2px fade(@error-color, 20%);
      }
    }
  }


  [type=text],
  textarea,
  select {
    width: 100%;
  }

  textarea {
    min-height: 45px;
    resize: vertical;
  }

  label {
    .label();
  }

  button {
    .action-button();
  }
}

.pp-error-message {
  color: @error-color;
}

.pp-row {
  margin-top: 10px;
  margin-bottom: 10px;
  &:first-of-type {
    margin-top: 0;
  }
  &:last-of-type {
    margin-bottom: 0;
  }
}

.pp-textfield,
.pp-textarea {
  margin-bottom: 3px;
}

.pp-radios-group {
  list-style: none;
  padding: 0;
  margin: 0 0 9px 0;

  .pp-radio-wrapper {
    margin: 6px 0;
  }

  input,
  label {
    vertical-align: middle;
  }

  input {
    margin-top: 0;
    margin-left: 0;
  }
}

.pp-radios-group,
.pp-checkbox {
  input {
    margin-left: 0;
  }

  label {
    &:after {
      display: none;
    }
  }
}

.pp-textfield {
  input {
    padding-right: 28px;
  }

  .clear {
    background: transparent;
    border: none;
    top: 0;
    right: 0;
  }
}

.pp-select {
  select {
    height: 23px;
  }
  button.add {
    top: -22px;
    right: 0;
  }
}

.djs-properties-entry {
  margin-bottom: 9px;
  .pp-field-wrapper {
    position: relative;
  }
}

.pp-hidden {
  display: none;
}

label.pp-hidden {
  .pp-hidden;
}


.djs-properties-static {
  margin-bottom: 0;
  margin-top: 0;
  border: 1px solid @gray-light;
  background-color: white;
  padding: 3px 6px;
  font: 13.3333px Arial;
  width: 100%;
}

@import "./header";
@import "./groups";
@import "./listeners";
@import "./tabs";

